--- a/src/components/BannerCollection/styles.module.scss
+++ b/src/components/BannerCollection/styles.module.scss
@@ -21,9 +21,11 @@
         h2 {
             position: absolute;
             color: #fff;
-            font-size: 2.5rem;
+            font-size: 4.5rem;
+            font-family: var(--font-Noto);
+            font-weight: 400;
             letter-spacing: 2px;
-            text-transform: uppercase;
+            //text-transform: uppercase;
             z-index: 2;
         }
 
