--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -74,6 +74,7 @@
                     position: absolute;
                     bottom: 10px;
                     right: 550px;
+                    cursor: pointer;
                 }
             }
         }
@@ -86,6 +87,16 @@
             align-items: center;
             gap: 20px;
             color: rgba(255, 255, 255, .4);
+            cursor: pointer;
+
+
+            svg {
+                transition: .4s ease;
+
+                &:hover {
+                    transform: scale(1.1);
+                }
+            }
         }
     }
 
