--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -34,15 +34,24 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  transition: .4s ease;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 li {
   list-style: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 @media (prefers-color-scheme: dark) {
