--- a/src/pages/collections/styles.module.scss
+++ b/src/pages/collections/styles.module.scss
@@ -1,1 +1,10 @@
-.container {}
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    background-color: #f5f5dc;
+
+}
