--- a/src/components/CarouselProducts2/styles.module.scss
+++ b/src/components/CarouselProducts2/styles.module.scss
@@ -40,10 +40,24 @@
                             object-fit: cover;
                             object-position: center;
                             transition: transform 0.4s ease;
+                        }
 
-                            &:hover {
+                        &:hover {
+                            .image {
                                 transform: scale(1.05);
                             }
+
+                            .buttonContainer {
+                                height: 50px;
+                            }
+                        }
+
+                        .buttonContainer {
+                            position: absolute;
+                            height: 0;
+                            width: 100%;
+                            bottom: 0;
+                            left: 0;
                         }
                     }
 
