--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -54,6 +54,13 @@ li {
   user-select: none;
 }
 
+button {
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  color: inherit;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
