--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -61,6 +61,16 @@ button {
   color: inherit;
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
