Inicia criação de pagina de produtos

--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -6,6 +6,7 @@
     align-items: center;
     background-color: var(--wine);
     padding: 20px 0;
+    color: white;
 
     .linkContainer {
         width: 50%;
