--- a/src/components/homeComponents/Carousel/styles.module.scss
+++ b/src/components/homeComponents/Carousel/styles.module.scss
@@ -49,7 +49,7 @@
 .image {
     object-fit: cover;
     object-position: top;
-    animation: imageAnimation 25s ease-in-out infinite;
+    //animation: imageAnimation 25s ease-in-out infinite;
 }
 
 @keyframes imageAnimation {
