--- a/src/components/productPage/ProductImages/styles.module.scss
+++ b/src/components/productPage/ProductImages/styles.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     gap: 1rem;
     width: 100%;
-    height: 600px;
+    height: 100%;
     position: relative;
 
     @media (max-width: 768px) {
@@ -20,7 +20,7 @@
     max-height: 100%;
     padding-right: 0.3rem;
     cursor: pointer;
-    outline: 2px solid red;
+    //outline: 2px solid red;
 
     @media (max-width: 768px) {
         flex-direction: row;
@@ -53,7 +53,7 @@
     }
 }
 
-.thumbImage {
+.image {
     object-fit: cover;
 }
 
@@ -64,8 +64,11 @@
     border-radius: 10px;
     overflow: hidden;
     background: transparent;
-    aspect-ratio: 1/1;
+    aspect-ratio: 4 / 3;
+    //height: 100%;
     min-height: 400px;
+    //outline: 2px solid red;
+
 
     @media (max-width: 768px) {
         width: 100%;
