--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -25,7 +25,7 @@ body {
 body {
   color: var(--background);
   //background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-Roboto);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
